--- a/多机场分流.yaml
+++ b/多机场分流.yaml
@@ -1126,6 +1126,14 @@ rule-providers:
     path: ./RuleSet/Direct.yaml
     interval: 86400
 
+# 360Update
+  360Update:
+    type: http
+    behavior: classical
+    url: "https://https://raw.githubusercontent.com/Yzaams/clash/main/RuleSet/360.yaml"
+    path: ./RuleSet/360Update.yaml
+    interval: 86400
+
 # 常用软件广告
   AdvertisingLite:
     type: http
@@ -1405,7 +1413,7 @@ rule-providers:
   CN_max:
     type: http
     behavior: classical
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Classical.yaml"
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Classical.yaml"
     path: ./RuleSet/ChinaMax_Classical.yaml
     interval: 86400
 
@@ -1413,6 +1421,7 @@ rule-providers:
 rules:
   - RULE-SET,Lan,🎯 全球直连
   - RULE-SET,Direct,🎯 全球直连
+  - RULE-SET,360Update,🎯 全球直连
   - RULE-SET,AdvertisingLite,📵 广告拦截
   - RULE-SET,Hijacking,🍃 应用净化
   - RULE-SET,Privacy,🍃 应用净化
