--- a/RuleSet/360.yaml
+++ b/RuleSet/360.yaml
@@ -1,2 +1,3 @@
-- DOMAIN-SUFFIX,update.360safe.com
-- DOMAIN-SUFFIX,tr.p.360.cn
+payload:
+  - DOMAIN-SUFFIX,update.360safe.com
+  - DOMAIN-SUFFIX,tr.p.360.cn
