--- a/多机场分流.yaml
+++ b/多机场分流.yaml
@@ -1126,6 +1126,13 @@ rule-providers:
     path: ./RuleSet/Direct.yaml
     interval: 86400
 
+  360:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/360/360.yaml"
+    path: ./RuleSet/360.yaml
+    interval: 86400
+
 # 常用软件广告
   Advertising:
     type: http
@@ -1413,6 +1420,7 @@ rule-providers:
 rules:
   - RULE-SET,Lan,🎯 全球直连
   - RULE-SET,Direct,🎯 全球直连
+  - RULE-SET,360,🎯 全球直连
   - RULE-SET,Advertising,📵 广告拦截
   - RULE-SET,Hijacking,🍃 应用净化
   - RULE-SET,Privacy,🍃 应用净化
